# dyadic-arith

./: CHANGELOG.md  README.md  dune-project
_build/: .db  .digest-db  log
_build/.aliases/default/src/: all-00000000000000000000000000000000
_build/default/: .gitignore  .gitlab-ci.yml  README.md  _CoqProject  pruvendo-arith.dune-package  pruvendo-arith.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/src/: dune
_build/default/src/Diadic/: Arith.v  Common.v  Lt.v  Minus.v  Plus.v  ToNat.v
_build/install/default/doc/pruvendo-arith/: CHANGELOG.md
_build/install/default/lib/coq/user-contrib/Pruvendo/Arith/Diadic/: Arith.v  Arith.vo  Basic.v  Basic.vo  Common.v  Common.vo  Lt.v  Lt.vo  Minus.v  Minus.vo  Plus.v  Plus.vo  ToNat.v  ToNat.vo  Z.v  Z.vo  diadic.v  diadic.vo  sigma.v
_build/install/default/lib/pruvendo-arith/: META  dune-package  opam
src/Diadic/: Basic.v  Minus.v  Z.v  diadic.v  sigma.v
src/Diadic/_unused/: binary.v  dependent_binary.v  diadic2.v  fff
